--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "io": "env-cmd -f ./config/dev.env nodemon src/chat/src/index.js"
   },
   "jest": {
     "testEnvironment": "node"
@@ -16,12 +17,15 @@
     "@sendgrid/mail": "^7.4.2",
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
     "get-json": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.18",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.5",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "sharp": "^0.27.2",
