--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "dotenv": "^8.2.0",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "get-json": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.5",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
+    "path": "^0.12.7",
     "sharp": "^0.27.2",
     "socket.io": "^4.0.0",
+    "uniqid": "^5.3.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
